# dyn-grid-compliance-verification

./: .flake8  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  build_and_install.sh  conftest.py  pyproject.toml  uv_usage.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yml  suggestion.yml
.github/workflows/: dev-ci.yml
attic/: add_noise.py  curves_creation.py  steady_state.py
attic/sigproc_workbench/: 2nd_order_filter_tests.ipynb
docker/: Dockerfile  README_Linux.MD  README_WSL2.MD  README_WSL2_DEVELOPER.MD  README_WSL2_USER.MD  build.sh  export_image.sh  import_image.sh  run_dycov_docker.sh  start_dycov.sh
docker/GFM-only/: Dockerfile  README_Linux.MD  README_WSL2.MD  README_WSL2_DEVELOPER.MD  README_WSL2_USER.MD  build.sh  export_image.sh  import_image.sh  run_dycov_docker.sh  start_dycov.sh
docs/: README.md  adding_new_pcs.md
docs/GFM_envelopes_curves/Envelopes/: README.md  Readme.md
docs/design/: Design_specs.md  DyCoV diagram.drawio  DyCoV_architecture_map.md  DyCoV_input_generation_RTE_questions.md  DyCoV_input_generation_from_excel_design.md  Dynawo_PyPowsybl_Backend.md  Dynawo_PyPowsybl_feasibility.md  Dynawo_par_generation_from_excel_design.md  Signal_processing_workflow.md
docs/developer/: README.md  add_new_pcs.md  extending_dycov.md  project_structure.md  setup.md
docs/installation/: README.md  linux_native.md  using_the_provided_image.md
docs/manual/: Readme.md  helps.py
docs/manual/source/: conf.py  examples.rst  index.rst
docs/manual_dev/: Readme.md
docs/manual_dev/GFM_Flowchart/: RoCoF.xml  SCRJump.xml  amplitude_step.xml  main_flow.xml  phase_jump.xml
docs/manual_dev/source/: conf.py  index.rst
docs/tutorial/: 1a_installation_linux.md  1b_installation_windows.md  2_general_usage.md  3_preparing_inputs.md  4_configuration.md  5_modifying_pcs.md  general_usage.md
docs/tutorials/: README.md  advanced_configuration.md  advanced_pcs_customization.md  electrical_performance_verification.md  first_steps.md  grid_forming_analysis.md  md2pdf.sh  preparing_inputs.md  quick_start.md  rms_model_validation.md  understanding_reports.md
examples/GFM/Fusion/: Producer.ini
examples/GFM/Overdamped/: Producer.ini
examples/GFM/Underdamped/: Producer.ini
examples/GFM_Fusion/: Producer.ini
examples/GFM_Overdamped/: Producer.ini
examples/GFM_Underdamped/: Producer.ini
installers/: DGCV_win_installer.iss  DyCoV_GFM_only.md  MAINTAINER_GUIDE.MD  README.MD  dycov_GFM_only_setup.iss  linux_install.sh  prepare_release.sh
installers/docker/: Dockerfile  MAINTAINER_GUIDE.MD  README.MD  build.sh  export_image.sh  import_image.sh  run_dycov_docker.sh  start_dycov.sh
installers/wsl/: import_wsl.bat  import_wsl.ps1  run_dycov_wsl.ps1
scripts/: git-merge-csv-ref  setup-git-hooks.sh
src/dgcv/: launchers.py
src/dgcv/core/: execution_parameters.py  initialization.py  validation.py  validator.py
src/dgcv/curves/: curves.py  manager.py  producer.py  producer_factory.py  reader.py
src/dgcv/dynawo/: curves.py  dyd.py  dynawo.py  file_variables.py  jobs.py  par.py  table.py
src/dgcv/files/: dynawo_curves_file.py  manage_files.py  producer_curves.py  producer_dyd_file.py  producer_par_file.py  tso_file.py
src/dgcv/logging/: logger.py
src/dgcv/model/: benchmark.py  operating_condition.py  pcs.py  producer.py
src/dgcv/report/: figure.py  html.py  report.py
src/dgcv/sigpro/: sigpro.py
src/dgcv/validation/: model.py  performance.py
src/dycov/: launchers.py
src/dycov/cli/: cli_parsers.py  command_handlers.py  utils.py
src/dycov/configuration/: cfg.py  config.ini  defaultConfig.ini  dump.py
src/dycov/core/: execution_parameters.py  global_variables.py  graceful_shutdown.py  initialization.py  input_template.py  parameters.py  validation.py  validator.py
src/dycov/curves/: anonymizer.py  curves.py  curves_factory.py  manager.py  naming.py  voltage_dip.py
src/dycov/dynawo/: curves.py  dynawo.py  table.py  translator.py
src/dycov/electrical/: generator_variables.py  initialization_calcs.py  pimodel_parameters.py
src/dycov/files/: manage_files.py  model_parameters.py  omega_file.py  producer_curves.py  producer_dyd_file.py  producer_ini_file.py  producer_par_file.py  replace_placeholders.py  tso_file.py
src/dycov/gfm/: constants.py  generator.py  gfm.py  outputs.py  parameters.py  producer.py
src/dycov/logging/: __init__.py  logger.py  logging.py  simulation_logger.py  test_context.py
src/dycov/model/: benchmark.py  compliance.py  operating_condition.py  parameters.py  pcs.py  producer.py
src/dycov/model_lib/: TSOModel.jobs
src/dycov/report/: LatexReportException.py  curve_classification.py  figure.py  figure_decorations.py  figure_renderer.py  html.py  printable.py  report.py  types.py
src/dycov/sanity_checks/: file_checks.py  parameter_checks.py  system_checks.py  topology_checks.py
src/dycov/sigpro/: README.md  lp_filters.py  signal_windows.py  sigpro.py
src/dycov/validate/: parameters.py  producer.py  validation.py
src/dycov/validation/: checks.py  common.py  compliance_list.py  model.py  performance.py  sanity_checks.py  threshold_variables.py
tests/: README.md  test_tool.sh
tests/dgcv/: test_tool.py
tests/dgcv/validation/: test_sanity_checks.py
tests/dycov/: test_launchers.py  test_tool.py  utils.py
tests/dycov/configuration/: test_cfg.py  test_dump.py
tests/tools/: test_dynawo_par.py
tests_integration/: README.md  conftest.py  test_performance.py  test_tool.sh  test_validate_model.py  utils.py
tools/: README.md  analyze_complexity.py  compare_PDR.py  run_complexity_analysis.sh
tools/analysis/: analyze_complexity.py  compare_PDR.py
tools/dynawo_par/: README.md  generate_par.py
tools/olf_init_check/: README.md  compare_init.py  network_builder.py  test_network_builder.py
tools/profiling/: README.md
tools/pypowsybl-vs-native/: .gitignore  README.md  additional_models.json  list_supported_models.py  probe_iec_under_wecc.json  run_native_vs_pypowsybl.py
tools/scripts/: extract_curves.sh  run_complexity_analysis.sh
(+3167 files in other folders)
